<resources>
    <string name="app_name">ArtSpace</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editText_log_username">Username</string>
    <string name="edittext_log_password">Password</string>
    <string name="button_login">Iniciar Sesion</string>
    <string name="button_register">Registrarse</string>
    <string name="preference_file_name">PREFERENCES_FILE_APP</string>
    <string name="salir">Salir</string>
    <string name="editText_reg_username">Username</string>
    <string name="editText_reg_email">Email</string>
    <string name="editText_reg_fullname">Fullname</string>
    <string name="editText_reg_password">Password</string>
    <string name="editText_reg_location">Location</string>
    <string name="editText_reg_address">Address</string>
    <string name="button_tren_follow">Seguir</string>
    <string name="newArtWork">Nuevo ArtWork</string>
    <string name="title_trending">Tendencias</string>
    <string name="title_following">Siguiendo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Siguiendo</string>
    <string name="yourArtworks">Tus publicaciones</string>
    <string name="profile_description"> Descripcion</string>
    <string name="title_profile">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="cartItems">Titulo ArtWork</string>
    <string name="cartPrice">Precio</string>
    <string name="Euro">€</string>
    <string name="Follow">Seguir</string>
    <string name="NombreArtWorkEnCarrito">Nombre del artWork</string>
    <string name="PrecioDelArtWorkEnCarrito">Precio</string>
    <string name="TextView_cart_total">Total</string>
    <string name="textView_cart_total_precio">Precio</string>
    <string name="button_cart_pagar">Efectuar Pago</string>
    <string name="username">Username</string>
    <string name="unfollow">Dejar de seguir</string>
    <string name="title_activity_artwork_details__scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="Titulo_artwork">Título</string>
    <string name="Material_artwork">Material</string>
    <string name="Precio_artwork">Precio</string>
    <string name="Descripcion_artwork">Descripcion</string>
    <string name="Imagen_upload">Seleccionar Imagen</string>
    <string name="Subir_artwork">Subir publicacion</string>
    <string name="nombreDeUsuario">Nombre de usuario</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="EmailEdit">Email</string>
    <string name="Direccion">Direccion</string>
    <string name="Localidad">Localidad</string>
    <string name="Editar">Editar perfil</string>
    <string name="Comentarios">Comentarios</string>
    <string name="Comentario">Comentario</string>
    <string name="EnviarComentario">Enviar Comentario</string>
</resources>