<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trending">

    <fragment
        android:id="@+id/navigation_following"
        android:name="com.salesianostriana.dam.artspace.ui.following.followingFragment"
        android:label="@string/title_following"
        tools:layout="@layout/fragment_following_list" />

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.salesianostriana.dam.artspace.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/fragment_trending_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.salesianostriana.dam.artspace.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_list" />
</navigation>