<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView_details_comentarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:text="@string/Comentarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_details_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="184dp"
        android:text="@string/Titulo_artwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_details_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/Precio_artwork"
        app:layout_constraintBottom_toBottomOf="@+id/textView_details_tittle"
        app:layout_constraintStart_toEndOf="@+id/textView_details_tittle"
        app:layout_constraintTop_toTopOf="@+id/textView_details_tittle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_details_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/Descripcion_artwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_tittle" />

    <ImageView
        android:id="@+id/imageView_details_cart"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_marginStart="136dp"
        android:src="@drawable/ic_add_to_cart"
        app:layout_constraintBottom_toBottomOf="@+id/textView_details_simboloEuro"
        app:layout_constraintStart_toEndOf="@+id/textView_details_simboloEuro"
        app:layout_constraintTop_toTopOf="@+id/textView_details_simboloEuro"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:id="@+id/textView_details_simboloEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/Euro"
        app:layout_constraintBottom_toBottomOf="@+id/textView_details_precio"
        app:layout_constraintStart_toEndOf="@+id/textView_details_precio"
        app:layout_constraintTop_toTopOf="@+id/textView_details_precio"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_details_image"
        android:layout_width="232dp"
        android:layout_height="165dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editText_det_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Comentario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_det_enviarComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/button_det_enviarComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/EnviarComentario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_det_comment"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_det_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_details_comentarios">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_details_comment"
                android:name="com.salesianostriana.dam.artspace.ui.artwork.detallesFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".ui.artwork.DetallesFragment"
                tools:listitem="@layout/fragment_detalles" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>