<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_cart_art_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/PrecioDelArtWorkEnCarrito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.463" />

            <TextView
                android:id="@+id/textView_cart_art_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="120dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/NombreArtWorkEnCarrito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView_cart_image"
                android:layout_width="110dp"
                android:layout_height="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView_cart_art_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Material_artwork"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_cart_art_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_cart_art_title" />

            <TextView
                android:id="@+id/textView_cart_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Euro"
                app:layout_constraintBottom_toBottomOf="@+id/textView_cart_art_precio"
                app:layout_constraintStart_toEndOf="@+id/textView_cart_art_precio"
                app:layout_constraintTop_toTopOf="@+id/textView_cart_art_precio" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>